# auditoria-doe

./: .env-dist  Dockerfile  README.md  app_01.py  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
auditoria-doe/: app.py  utils.py
auditoria-doe/doe_data/: acesso_bd.py  queries.py  settings_bd.py
doe_data/: acesso_bd.py  queries.py
tests/: test_app.py
utils/: tools.py  visualizacao.py
