[tool.poetry]
name = "auditoria-doe"
version = "0.1.0"
description = ""
authors = ["accarneiro <alexcamanho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
streamlit = "^1.44.1"
requests = "^2.32.3"
streamlit-js-eval = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
