[tool.poetry]
name = "auditoria_doe"
version = "0.1.0"
description = "A simple Streamlit app that displays 'Hello World'."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.0.0"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
sqlalchemy = "^2.0.41"
pydantic-settings = "^2.9.1"
psycopg = {extras = ["binary"], version = "^3.2.9"}
urllib3 = "^2.4.0"
plotly = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"